--- a/Hammond.API/Hammond.API.csproj
+++ b/Hammond.API/Hammond.API.csproj
@@ -9,4 +9,10 @@
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1"/>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="node_modules\**" />
+    <Content Remove="node_modules\**" />
+    <EmbeddedResource Remove="node_modules\**" />
+    <None Remove="node_modules\**" />
+  </ItemGroup>
 </Project>
