--- a/Hammond-SPA/package.json
+++ b/Hammond-SPA/package.json
@@ -29,6 +29,7 @@
     "ngx-useful-swiper": "^8.0.1",
     "rxjs": "^6.0.0",
     "swiper": "^5.2.1",
+    "time-ago-pipe": "^1.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
