--- a/Hammond.API/Hammond.API.csproj
+++ b/Hammond.API/Hammond.API.csproj
@@ -2,6 +2,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
+  <PropertyGroup>
+  <DefaultItemExcludes>node_modules/**;$(DefaultItemExcludes)</DefaultItemExcludes>
+</PropertyGroup>
   <ItemGroup>
     <Folder Include="wwwroot\"/>
   </ItemGroup>
