changes to run on new laptop

--- a/Hammond.API/appsettings.json
+++ b/Hammond.API/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
