--- a/Hammond.API/appsettings.Development.json
+++ b/Hammond.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
 
   "Logging": {
