Student Act Scores working

--- a/Hammond.API/appsettings.json
+++ b/Hammond.API/appsettings.json
@@ -4,7 +4,7 @@
   },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true;User ID=LAPTOP-335O6U50\\grego;"
   },
 
   "Logging": {
