--- a/Hammond-SPA/package.json
+++ b/Hammond-SPA/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "ng2-file-upload": "^1.4.0",
     "ngx-bootstrap": "^3.3.0",
     "ngx-useful-swiper": "^8.0.1",
     "rxjs": "^6.0.0",
