--- a/Hammond.API/appsettings.Development.json
+++ b/Hammond.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Hammond;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:hammondserv.database.windows.net,1433;Initial Catalog=Hammond;Persist Security Info=False;User ID=MrButt;Password=Kr1shS3rv1c3s;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Logging": {
